app/assets/stylesheets/active_scaffold_layout.css
/* ... */
.active-scaffold fieldset {
border: none;
}

.active-scaffold h4,
.active-scaffold h5 {
padding: 2px;
margin: 0;
text-transform: none;
letter-spacing: -1px;
font-weight: bold;
font-size: 16px;
}

.active-scaffold h5 {
padding: 0;
margin: 5px 0 2px 0;
font-size: 14px;
letter-spacing: 0;
}

.active-scaffold ol {
clear: both;
float: none;
padding: 2px;
margin-left: 5px;
list-style: none;
}
.active-scaffold ol:after {
content: '.';
visibility: hidden;
line-height: 0;
height: 0;
display: block;
clear: both;
}

.active-scaffold p.form-footer {
clear: both;
}
.active-scaffold .form-footer.floating {
position: fixed;
bottom: 10px;
z-index: 10;
top: auto;
left: auto;
border: none;
padding: 10px;
background: white;
}


.active-scaffold a.as_cancel,
.active-scaffold p.form-footer a {
font-weight: bold;
font-size: 14px;
letter-spacing: 0;
}

.active-scaffold .active-scaffold-footer div.actions {
  margin-top: -20px;
}
.active-scaffold .active-scaffold-footer div.actions a {
  margin: 0;
}

/* Form :: Fields
   ============================== */

.active-scaffold li.form-element {
clear: both;
}

.active-scaffold label, .active-scaffold label + a.visibility-toggle {
font-weight: normal;
font-size: 11px;
}

.active-scaffold li.form-element dt {
float: left;
width: 12em;
padding: 6px 0;
}

.active-scaffold li.form-element dd {
float: left;
}

.active-scaffold li.form-element dd p,
.active-scaffold li.form-element dd input[type="checkbox"] {
margin-top: 6px;
}

.active-scaffold .form dd {
margin: 0;
}


.active-scaffold .description {
display: inline-block;
font-size: 10px;
margin-left: 5px;
}

.active-scaffold .required label {
font-weight: bold;
}

.active-scaffold label.example {
font-size: 11px;
}

.active-scaffold input.text-input,
.active-scaffold select {
font-weight: bold;
font-size: 16px;
letter-spacing: -1px;
border: solid 1px;
}

.active-scaffold input.text-input {
padding: 2px;
}

.active-scaffold .fieldWithErrors input,
.active-scaffold .field_with_errors input,
.active-scaffold .fieldWithErrors textarea,
.active-scaffold .field_with_errors textarea,
.active-scaffold .fieldWithErrors select,
.active-scaffold .field_with_errors select {
border: solid 1px;
}

.active-scaffold select {
padding: 1px;
}


.active-scaffold textarea {
font-size: 12px;
padding: 1px;
border: solid 1px;
}

.active-scaffold .refresh-link {
display: inline-block;
width: 25px;
text-indent: 26px;
overflow: hidden;
background-position: 5px 50%;
background-repeat: no-repeat;
}

.active-scaffold .checkbox-list {
padding-left: 0px;
}

.active-scaffold .checkbox-list li {
padding-right: 5px;
display: inline;
}

.active-scaffold .checkbox-list li label {
padding: 0 0 0 2px;
}
.active-scaffold .checkbox-list + .refresh-link {
float: left;
}
.active-scaffold .check-buttons .check-all {
  margin-right: 10px;
}

.active-scaffold .draggable-list {
float: left;
width: 300px;
margin-right: 15px;
min-height: 30px;
max-height: 100px;
overflow: auto;
}
.active-scaffold .draggable-list.hover {
  opacity: 0.5;
}
.active-scaffold .draggable-lists-container {
  display: flex;
  align-items: start;
}
.active-scaffold .draggable-lists-container .loading-indicator { align-self: end; }

.active-scaffold .draggable-lists-container .check-buttons {
  margin-right: 15px;
  align-self: stretch;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.active-scaffold .draggable-lists-container .check-buttons a {
  display: block;
  margin: 0;
}


.active-scaffold .draggable-list li {
display: block;
}

li.draggable-item {
  list-style: none;
}
li.draggable-item, li.draggable-item label {
  cursor: move;
}
li.ui-draggable-disabled, li.ui-draggable-disabled label {
  cursor: default;
}
li.draggable-item input,
.active-scaffold .draggable-list input {
display: none;
}

/* Form :: Sub-Sections
   ============================== */

.active-scaffold li.sub-section {
clear: left;
padding: 5px 0;
}

/* Form :: Association Sub-Forms
   ============================== */

.active-scaffold .sub-form {
float: left;
clear: left;
padding: 5px 0;
padding-left: 5px;
}
.active-scaffold .form-element .sub-form.optional {
float: none;
}
.active-scaffold .form-element a.show-new-subform {
margin-left: 5px;
}

.active-scaffold .sub-form h5 {
margin-left: -5px;
}

.active-scaffold .sub-form table,
.active-scaffold .sub-form table td {
width: auto;
background: none;
}

.active-scaffold .sub-form table th {
font-weight: normal;
font-size: 10px;
padding: 0 5px 0 1px;
background: none;
}

.active-scaffold .horizontal-sub-form td > dl > dt label {
display: none;
}

.active-scaffold .horizontal-sub-form .associated-record dl {
float: left;
margin-right: 5px;
}

.active-scaffold .vertical-sub-form .sub-form-record + .sub-form-record {
  border-top: 1px solid;
  padding: 10px 0;
}

.active-scaffold .sub-form .checkbox-list {
padding: 0 2px 2px 2px;
border: solid 1px;
}

.active-scaffold .sub-form .checkbox-list label {
display: block;
}

.active-scaffold .sub-form table td {
border: none;
background-color: transparent;
padding: 1px;
vertical-align: top;
}

.active-scaffold .sub-form .actions {
vertical-align: middle;
background-color: transparent;
clear: left;
}

.active-scaffold .sub-form .association-record a.destroy {
font-weight: bold;
display: block;
height: 16px;
padding: 0;
width: 16px;
text-indent: -4000px;
background: 0 0 no-repeat;
overflow: hidden;
}

.active-scaffold .sub-form .locked a.destroy {
display: none;
}

.active-scaffold .sub-form .association-record a {
font-weight: bold;
font-size: 12px;
}

.active-scaffold .sub-form input.text-input,
.active-scaffold .sub-form select {
letter-spacing: 0;
font-weight: bold;
font-size: 12px;
}

.active-scaffold .sub-form .footer-wrapper {
margin-top: 3px;
margin-right: 10px;
}

.active-scaffold .sub-form .footer {
padding: 3px 5px;
}

.active-scaffold .sub-form .footer select,
.active-scaffold .sub-form .footer input {
font-weight: bold;
font-size: 12px;
padding: 0;
}
/* ... */

